# cast2svg

./: .gitignore  Cargo.toml  README.md  README.tpl
.github/workflows/: ci.yml
src/: asciicast.rs  frame.rs  main.rs
tests/: bad_event.cast  min_events.cast  read_asciicast.rs  time_travel.cast
