[package]
name = "cast2svg"
version = "0.1.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
description = "Create an animated svg from an asciicast."
readme = "README.md"
repository = "https://github.com/newAM/cast2svg/"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
xmlwriter = "~0.1.0"
vte = "~0.9.0"
log = "~0.4.11"
stderrlog = "~0.5.1"
anyhow = "^1.0.38"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["derive", "suggestions", "color"]

[dev-dependencies]
assert_cmd = "^1.0.2"
predicates = "^1.0.6"
