[package]
name = "cast2svg"
version = "0.1.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
description = "Create an animated svg from an asciicast."
readme = "README.md"
repository = "https://github.com/newAM/cast2svg/"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
xmlwriter = "~0.1"
vte = "~0.10"
log = "~0.4"
stderrlog = "~0.5"
anyhow = "^1"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["derive", "suggestions", "color"]

[dev-dependencies]
assert_cmd = "^2.0.0"
predicates = "^2.0.1"
