[package]
name = "cast2svg"
version = "0.1.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
description = "Create an animated svg from an asciicast."
readme = "README.md"
repository = "https://github.com/newAM/cast2svg/"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1"
clap = { version = "3.0.13", features = ["derive", "suggestions", "color"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stderrlog = "0.5"
vte = "0.10"
xmlwriter = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
